# iterata

./: .gitignore  DEVELOPMENT.md  INSTALL.md  LICENSE  README.md  USAGE.md  pyproject.toml
examples/: README.md  basic_usage.py  complete_workflow.py  invoice_extraction.py  pattern_analysis.py  skill_generation.py  with_auto_explain.py
src/iterata/: __init__.py  cli.py  decorators.py  loop.py
src/iterata/analysis/: __init__.py  pattern_detector.py  stats.py
src/iterata/backends/: __init__.py  anthropic.py  base.py  mock.py
src/iterata/core/: __init__.py  logger.py  models.py  storage.py
src/iterata/skill/: __init__.py  generator.py  templates.py
tests/: __init__.py  test_anthropic.py  test_decorators.py  test_logger.py  test_loop.py  test_models.py  test_pattern_detector.py  test_skill_generator.py  test_stats.py  test_storage.py
